chore: Fix sonar issues [DHIS2-17835]